# dns-filter-rust

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deny.toml
.cowork/: Skills.toml
docker/: config.yaml
migrations/mysql/: 001_initial_schema.sql  002_normalize_list_columns.sql  003_add_outbound_routing.sql  004_add_dns_response_cache.sql
migrations/postgres/: 001_initial_schema.sql  002_normalize_list_columns.sql  003_add_outbound_routing.sql  004_add_dns_response_cache.sql
migrations/sqlite/: 001_initial_schema.sql  002_normalize_list_columns.sql  003_add_outbound_routing.sql  004_add_dns_response_cache.sql
package/: config.example.yaml
package/config/: config.example.yaml
package/openrc/: dns-filter.openrc
package/systemd/: dns-filter.service
src/: config.rs  lib.rs  logging.rs  main.rs  metrics.rs  upstream.rs
src/entities/: filter.rs  mod.rs  plugin.rs  query_log.rs  resolution.rs
src/frameworks/: control_client.rs  control_socket.rs  mod.rs  privileges.rs  signal_handler.rs
src/frameworks/acme/: cert_resolver.rs  cloudflare.rs  mod.rs
src/frameworks/config/: loader.rs  merger.rs  mod.rs  schema.rs
src/frameworks/database/: filter_cache_repo.rs  filter_list_repo.rs  filtering_config_repo.rs  mod.rs  pool.rs  tests.rs  upstream_repo.rs  zone_repo.rs
src/frameworks/logging/: mod.rs  syslog.rs
src/frameworks/metrics/: mod.rs
src/frameworks/plugin_runtime/: mod.rs
src/frameworks/upstream/: dns_client.rs  doh_client.rs  doq_client.rs  dot_client.rs  mod.rs  recursive_resolver.rs  runtime.rs
src/interface_adapters/: mod.rs
src/interface_adapters/listeners/: admin.rs  auth.rs  dns.rs  doh.rs  doq.rs  dot.rs  handler.rs  http.rs  mcp.rs  metrics.rs  mod.rs  tls.rs
src/use_cases/: config_bootstrap.rs  config_from_db.rs  filtering.rs  mod.rs  plugin_handler.rs  reload.rs  repositories.rs  repository_types.rs  request_pipeline.rs  seed.rs  server_operations.rs  upstream_resolver.rs  zone_authority.rs  zone_discovery.rs  zone_forwarding.rs  zone_registry.rs
src/use_cases/filtering/: adguard.rs  common.rs  domains.rs  hosts.rs  mod.rs  rpz.rs  wildcard.rs
templates/: admin.html
tests/: listener_batch_test.sh  release-check.sh  reload.rs
