[package]
name = "dns-filter"
version = "2.0.2"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "0.14", features = ["full"] }
hickory-proto = { version = "0.26.1", default-features = false, features = ["dnssec-ring"] }
hickory-net = { version = "0.26.1", features = ["dnssec-ring", "tls-ring", "tokio"] }
hickory-resolver = { version = "0.26.1", features = ["recursor", "dnssec-ring"] }
ipnet = "2"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
rand = "0.8"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["user", "fs", "process"] }
caps = "0.5"
tracing-appender = "0.2"
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
webpki-roots = "0.26"
chrono = "0.4"
rustls = "0.23"
rustls-pki-types = "1"
syslog = "6"
url = "2"
