[package]
name = "dns-filter"
version = "2.5.1"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", optional = true }
hickory-proto = { version = "0.26.1", default-features = false, features = ["dnssec-ring"] }
hickory-net = { version = "0.26.1", features = ["dnssec-ring", "tls-ring", "https-ring", "tokio"] }
hickory-resolver = { version = "0.26.1", features = ["recursor", "dnssec-ring", "https-ring"] }
hickory-server = "0.26.1"
ipnet = "2"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
http = "1"
base64 = "0.22"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "migrate", "macros"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1.0"
hostname = { version = "0.4", optional = true }
nix = { version = "0.29", features = ["user", "fs", "process", "net"] }
socket2 = { version = "0.5", features = ["all"] }
caps = "0.5"
tracing-appender = "0.2"
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
webpki-roots = "0.26"
chrono = "0.4"
rustls = "0.23"
rustls-pki-types = "1"
syslog = "6"
url = "2"
wasmtime = { version = "44", optional = true }
rcgen = { version = "0.14.8", optional = true }
rmcp = { version = "1.7", features = ["server", "transport-streamable-http-server"], optional = true }
schemars = { version = "1", optional = true }
fuzzy-matcher = { version = "0.3", optional = true }
utoipa = { version = "5", optional = true }
quinn = { version = "0.11.9", optional = true }
opentelemetry = { version = "0.24", features = ["metrics"] }
opentelemetry-prometheus = "0.15"
prometheus = "0.13"

[features]
default = ["dot", "doh", "doq", "http-api", "mcp", "db-sqlite"]
plugins = ["wasmtime"]
dot = ["hickory-server/tls-ring", "dep:rcgen", "dep:hostname"]
doh = ["hickory-server/https-ring", "dep:rcgen", "dep:hostname"]
doq = ["hickory-net/quic-ring", "hickory-server/quic-ring", "dep:hostname", "dep:quinn", "dep:rcgen"]
http-api = ["dep:axum", "dep:utoipa"]
mcp = ["dep:axum", "dep:rmcp", "dep:schemars", "dep:fuzzy-matcher"]
db-sqlite = ["sqlx/sqlite"]
db-mysql = ["sqlx/mysql"]
db-postgres = ["sqlx/postgres"]
